--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,27 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/stylesheets/style.css">
-    <title>Bahrain Business</title>
-</head>
-<body>
-      <h1>Welcome to the Bahrain Business Directory!</h1>
-      <img src="/assets/phonebook.png" alt="photo">
-      <p>A simple directory where users can browse small to mid-size business in Bahrain. </p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bahrain Business Directory</title>
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+  </head>
+  <body>
+    <h1>Welcome to the Bahrain Business Directory</h1>
+    <img
+      src="/assets/phonebook.png"
+      alt="a phonebook"
+      class="phonebook"
+    />
+    <p>
+      A sample directory where users can browse small to mid-size busnisses in
+      Bahrain
+    </p>
+
+    <a href="/businesses" class="businesses-index-link">
+      <div class="index-link-text"> 
+      Browse Businesses 
+      </div>
+    </a>
+    <footer>Icons by <a href="https://www.flaticon.com/authors/freepik">Freekpik</a> </footer>
+  </body>
 </html>
