--- a/views/businesses/show.ejs
+++ b/views/businesses/show.ejs
@@ -28,7 +28,14 @@
       </a>
 		</p>
 		<% } %>
-		
+
+        <div class="actions">
+            <form action="/businesses/<%= foundBusiness._id %>?_method=DELETE" method="POST">
+                <button class="delete-button" type="submit">Delete <%= foundBusiness.name %></button>
+            </form>
+        </div> 
+
+
            <a class="businesses-index-link" href="/businesses">
       <div class="index-link-text">Back to All Businesses</div>
     </a>
