--- a/views/businesses/show.ejs
+++ b/views/businesses/show.ejs
@@ -35,10 +35,13 @@
             </form>
         </div> 
 
-
+           
+         <a class="edit-link" href="/businesses/<%= foundBusiness._id %>/edit">
+        <div class="edit-text">Edit <%= foundBusiness.name %></div>
+    </a>
+ 
            <a class="businesses-index-link" href="/businesses">
       <div class="index-link-text">Back to All Businesses</div>
     </a>
-
 </body>
 </html>
